// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@tonal/key > C minor chords 1`] = `
[
  {
    "name": "Cm7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Dm7b5",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Ebmaj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Fm7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Gm7",
    "roles": [
      "D",
      "ii/IV",
    ],
  },
  {
    "name": "Abmaj7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Bb7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "G7",
    "roles": [
      "V/I",
      "D",
    ],
  },
  {
    "name": "C7",
    "roles": [
      "V/IV",
    ],
  },
  {
    "name": "D7",
    "roles": [
      "V/V",
    ],
  },
  {
    "name": "Eb7",
    "roles": [
      "V/bVI",
      "subV/II",
    ],
  },
  {
    "name": "F7",
    "roles": [
      "V/bVII",
      "SD",
    ],
  },
  {
    "name": "Dm7",
    "roles": [
      "ii/I",
      "SD",
    ],
  },
  {
    "name": "Am7",
    "roles": [
      "ii/V",
    ],
  },
  {
    "name": "Bbm7b5",
    "roles": [
      "ii/bVI",
    ],
  },
  {
    "name": "Cm7b5",
    "roles": [
      "ii/bVII",
    ],
  },
  {
    "name": "Db7",
    "roles": [
      "subV/I",
    ],
  },
  {
    "name": "Gb7",
    "roles": [
      "subV/IV",
    ],
  },
  {
    "name": "Ab7",
    "roles": [
      "subV/V",
    ],
  },
  {
    "name": "Bbb7",
    "roles": [
      "subV/bVI",
    ],
  },
  {
    "name": "Cb7",
    "roles": [
      "subV/bVII",
    ],
  },
  {
    "name": "Abm7",
    "roles": [
      "subii/I",
    ],
  },
  {
    "name": "Dbm7",
    "roles": [
      "subii/IV",
    ],
  },
  {
    "name": "Ebm7",
    "roles": [
      "subii/V",
    ],
  },
  {
    "name": "Fbm7b5",
    "roles": [
      "subii/bVI",
    ],
  },
  {
    "name": "Gbm7b5",
    "roles": [
      "subii/bVII",
    ],
  },
  {
    "name": "CmMaj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Eb+maj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Bo7",
    "roles": [
      "D",
    ],
  },
  {
    "name": "Am7b5",
    "roles": [
      "ii/V",
    ],
  },
  {
    "name": "Ebm7b5",
    "roles": [
      "subii/V",
    ],
  },
  {
    "name": "Cm6",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Bm7b5",
    "roles": [],
  },
  {
    "name": "A7",
    "roles": [
      "V/II",
    ],
  },
  {
    "name": "Em7",
    "roles": [
      "ii/II",
    ],
  },
  {
    "name": "Gm7b5",
    "roles": [
      "ii/IV",
    ],
  },
  {
    "name": "Bbm7",
    "roles": [
      "subii/II",
    ],
  },
  {
    "name": "Dbm7b5",
    "roles": [
      "subii/IV",
    ],
  },
]
`;

exports[`@tonal/key C major chords 1`] = `
[
  {
    "name": "Cmaj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Dm7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Em7",
    "roles": [
      "T",
      "ii/II",
    ],
  },
  {
    "name": "Fmaj7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "G7",
    "roles": [
      "D",
    ],
  },
  {
    "name": "Am7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Bm7b5",
    "roles": [
      "D",
    ],
  },
  {
    "name": "A7",
    "roles": [
      "V/II",
    ],
  },
  {
    "name": "B7",
    "roles": [
      "V/III",
    ],
  },
  {
    "name": "C7",
    "roles": [
      "V/IV",
    ],
  },
  {
    "name": "D7",
    "roles": [
      "V/V",
    ],
  },
  {
    "name": "E7",
    "roles": [
      "V/VI",
    ],
  },
  {
    "name": "F#m7",
    "roles": [
      "ii/III",
    ],
  },
  {
    "name": "Gm7b5",
    "roles": [
      "ii/IV",
    ],
  },
  {
    "name": "Am7b5",
    "roles": [
      "ii/V",
    ],
  },
  {
    "name": "Bm7",
    "roles": [
      "ii/VI",
    ],
  },
  {
    "name": "Eb7",
    "roles": [
      "subV/II",
    ],
  },
  {
    "name": "F7",
    "roles": [
      "subV/III",
    ],
  },
  {
    "name": "Gb7",
    "roles": [
      "subV/IV",
    ],
  },
  {
    "name": "Ab7",
    "roles": [
      "subV/V",
    ],
  },
  {
    "name": "Bb7",
    "roles": [
      "subV/VI",
    ],
  },
  {
    "name": "Bbm7",
    "roles": [
      "subii/II",
    ],
  },
  {
    "name": "Cm7",
    "roles": [
      "subii/III",
    ],
  },
  {
    "name": "Dbm7b5",
    "roles": [
      "subii/IV",
    ],
  },
  {
    "name": "Ebm7b5",
    "roles": [
      "subii/V",
    ],
  },
  {
    "name": "Fm7",
    "roles": [
      "subii/VI",
    ],
  },
]
`;

exports[`@tonal/key C minor chords 1`] = `
[
  {
    "name": "Cm7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Dm7b5",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Ebmaj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Fm7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Gm7",
    "roles": [
      "D",
      "ii/IV",
    ],
  },
  {
    "name": "Abmaj7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "Bb7",
    "roles": [
      "SD",
    ],
  },
  {
    "name": "G7",
    "roles": [
      "V/I",
      "D",
    ],
  },
  {
    "name": "C7",
    "roles": [
      "V/IV",
    ],
  },
  {
    "name": "D7",
    "roles": [
      "V/V",
    ],
  },
  {
    "name": "Eb7",
    "roles": [
      "V/bVI",
      "subV/II",
    ],
  },
  {
    "name": "F7",
    "roles": [
      "V/bVII",
      "SD",
    ],
  },
  {
    "name": "Dm7",
    "roles": [
      "ii/I",
      "SD",
    ],
  },
  {
    "name": "Am7",
    "roles": [
      "ii/V",
    ],
  },
  {
    "name": "Bbm7b5",
    "roles": [
      "ii/bVI",
    ],
  },
  {
    "name": "Cm7b5",
    "roles": [
      "ii/bVII",
    ],
  },
  {
    "name": "Db7",
    "roles": [
      "subV/I",
    ],
  },
  {
    "name": "Gb7",
    "roles": [
      "subV/IV",
    ],
  },
  {
    "name": "Ab7",
    "roles": [
      "subV/V",
    ],
  },
  {
    "name": "Bbb7",
    "roles": [
      "subV/bVI",
    ],
  },
  {
    "name": "Cb7",
    "roles": [
      "subV/bVII",
    ],
  },
  {
    "name": "Abm7",
    "roles": [
      "subii/I",
    ],
  },
  {
    "name": "Dbm7",
    "roles": [
      "subii/IV",
    ],
  },
  {
    "name": "Ebm7",
    "roles": [
      "subii/V",
    ],
  },
  {
    "name": "Fbm7b5",
    "roles": [
      "subii/bVI",
    ],
  },
  {
    "name": "Gbm7b5",
    "roles": [
      "subii/bVII",
    ],
  },
  {
    "name": "CmMaj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Eb+maj7",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Bo7",
    "roles": [
      "D",
    ],
  },
  {
    "name": "Am7b5",
    "roles": [
      "ii/V",
    ],
  },
  {
    "name": "Ebm7b5",
    "roles": [
      "subii/V",
    ],
  },
  {
    "name": "Cm6",
    "roles": [
      "T",
    ],
  },
  {
    "name": "Bm7b5",
    "roles": [],
  },
  {
    "name": "A7",
    "roles": [
      "V/II",
    ],
  },
  {
    "name": "Em7",
    "roles": [
      "ii/II",
    ],
  },
  {
    "name": "Gm7b5",
    "roles": [
      "ii/IV",
    ],
  },
  {
    "name": "Bbm7",
    "roles": [
      "subii/II",
    ],
  },
  {
    "name": "Dbm7b5",
    "roles": [
      "subii/IV",
    ],
  },
]
`;

exports[`@tonal/key majorKeys 1`] = `
{
  "alteration": 3,
  "chordScales": [
    "A major",
    "B dorian",
    "C# phrygian",
    "D lydian",
    "E mixolydian",
    "F# minor",
    "G# locrian",
  ],
  "chords": [
    "Amaj7",
    "Bm7",
    "C#m7",
    "Dmaj7",
    "E7",
    "F#m7",
    "G#m7b5",
  ],
  "chordsHarmonicFunction": [
    "T",
    "SD",
    "T",
    "SD",
    "D",
    "T",
    "D",
  ],
  "grades": [
    "I",
    "II",
    "III",
    "IV",
    "V",
    "VI",
    "VII",
  ],
  "intervals": [
    "1P",
    "2M",
    "3M",
    "4P",
    "5P",
    "6M",
    "7M",
  ],
  "keySignature": "###",
  "minorRelative": "F#",
  "scale": [
    "A",
    "B",
    "C#",
    "D",
    "E",
    "F#",
    "G#",
  ],
  "secondaryDominantSupertonics": [
    "",
    "C#m7",
    "D#m7",
    "Em7b5",
    "F#m7b5",
    "G#m7",
    "",
  ],
  "secondaryDominants": [
    "",
    "F#7",
    "G#7",
    "A7",
    "B7",
    "C#7",
    "",
  ],
  "secondaryDominantsMinorRelative": [
    "",
    "C#m7",
    "D#m7",
    "Em7b5",
    "F#m7b5",
    "G#m7",
    "",
  ],
  "substituteDominantSupertonics": [
    "",
    "Gm7",
    "Am7",
    "Bbm7b5",
    "Cm7b5",
    "Dm7",
    "",
  ],
  "substituteDominants": [
    "",
    "C7",
    "D7",
    "Eb7",
    "F7",
    "G7",
    "",
  ],
  "substituteDominantsMinorRelative": [
    "",
    "Gm7",
    "Am7",
    "Bbm7b5",
    "Cm7b5",
    "Dm7",
    "",
  ],
  "tonic": "A",
  "triads": [
    "A",
    "Bm",
    "C#m",
    "D",
    "E",
    "F#m",
    "G#dim",
  ],
  "type": "major",
}
`;

exports[`@tonal/key majorKeys 2`] = `
{
  "alteration": -2,
  "chordScales": [
    "Bb major",
    "C dorian",
    "D phrygian",
    "Eb lydian",
    "F mixolydian",
    "G minor",
    "A locrian",
  ],
  "chords": [
    "Bbmaj7",
    "Cm7",
    "Dm7",
    "Ebmaj7",
    "F7",
    "Gm7",
    "Am7b5",
  ],
  "chordsHarmonicFunction": [
    "T",
    "SD",
    "T",
    "SD",
    "D",
    "T",
    "D",
  ],
  "grades": [
    "I",
    "II",
    "III",
    "IV",
    "V",
    "VI",
    "VII",
  ],
  "intervals": [
    "1P",
    "2M",
    "3M",
    "4P",
    "5P",
    "6M",
    "7M",
  ],
  "keySignature": "bb",
  "minorRelative": "G",
  "scale": [
    "Bb",
    "C",
    "D",
    "Eb",
    "F",
    "G",
    "A",
  ],
  "secondaryDominantSupertonics": [
    "",
    "Dm7",
    "Em7",
    "Fm7b5",
    "Gm7b5",
    "Am7",
    "",
  ],
  "secondaryDominants": [
    "",
    "G7",
    "A7",
    "Bb7",
    "C7",
    "D7",
    "",
  ],
  "secondaryDominantsMinorRelative": [
    "",
    "Dm7",
    "Em7",
    "Fm7b5",
    "Gm7b5",
    "Am7",
    "",
  ],
  "substituteDominantSupertonics": [
    "",
    "Abm7",
    "Bbm7",
    "Cbm7b5",
    "Dbm7b5",
    "Ebm7",
    "",
  ],
  "substituteDominants": [
    "",
    "Db7",
    "Eb7",
    "Fb7",
    "Gb7",
    "Ab7",
    "",
  ],
  "substituteDominantsMinorRelative": [
    "",
    "Abm7",
    "Bbm7",
    "Cbm7b5",
    "Dbm7b5",
    "Ebm7",
    "",
  ],
  "tonic": "Bb",
  "triads": [
    "Bb",
    "Cm",
    "Dm",
    "Eb",
    "F",
    "Gm",
    "Adim",
  ],
  "type": "major",
}
`;

exports[`@tonal/key majorKeys 3`] = `
{
  "alteration": 4,
  "chordScales": [
    "E major",
    "F# dorian",
    "G# phrygian",
    "A lydian",
    "B mixolydian",
    "C# minor",
    "D# locrian",
  ],
  "chords": [
    "Emaj7",
    "F#m7",
    "G#m7",
    "Amaj7",
    "B7",
    "C#m7",
    "D#m7b5",
  ],
  "chordsHarmonicFunction": [
    "T",
    "SD",
    "T",
    "SD",
    "D",
    "T",
    "D",
  ],
  "grades": [
    "I",
    "II",
    "III",
    "IV",
    "V",
    "VI",
    "VII",
  ],
  "intervals": [
    "1P",
    "2M",
    "3M",
    "4P",
    "5P",
    "6M",
    "7M",
  ],
  "keySignature": "####",
  "minorRelative": "C#",
  "scale": [
    "E",
    "F#",
    "G#",
    "A",
    "B",
    "C#",
    "D#",
  ],
  "secondaryDominantSupertonics": [
    "",
    "G#m7",
    "A#m7",
    "Bm7b5",
    "C#m7b5",
    "D#m7",
    "",
  ],
  "secondaryDominants": [
    "",
    "C#7",
    "D#7",
    "E7",
    "F#7",
    "G#7",
    "",
  ],
  "secondaryDominantsMinorRelative": [
    "",
    "G#m7",
    "A#m7",
    "Bm7b5",
    "C#m7b5",
    "D#m7",
    "",
  ],
  "substituteDominantSupertonics": [
    "",
    "Dm7",
    "Em7",
    "Fm7b5",
    "Gm7b5",
    "Am7",
    "",
  ],
  "substituteDominants": [
    "",
    "G7",
    "A7",
    "Bb7",
    "C7",
    "D7",
    "",
  ],
  "substituteDominantsMinorRelative": [
    "",
    "Dm7",
    "Em7",
    "Fm7b5",
    "Gm7b5",
    "Am7",
    "",
  ],
  "tonic": "E",
  "triads": [
    "E",
    "F#m",
    "G#m",
    "A",
    "B",
    "C#m",
    "D#dim",
  ],
  "type": "major",
}
`;
